<resources>
    <string name="app_name">OnYourMark</string>
    <string name="app_title">On Your Mark</string>
    <string name="view_budget">View Budget</string>
    <string name="add_budget_item">Add Item</string>
    <string name="view_leftovers">View Leftovers</string>
    <string name="view_breakdown">View Breakdown</string>
    <string name="logo_description">OnYourMark Logo</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="subscription_key">22126be1efca48c6bf1f8fc6fe085bc6</string>
    <string name="category">Category</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="edit_total">Edit total</string>
    <string name="total">Total</string>
    <string name="company">Company</string>
    <string name="edit_company">Edit Company</string>
    <string name="take_a_photo_or_select_an_image">Take a photo or select an image!</string>
    <string name="take_photo">Take photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="edit_receipt">Manual Entry</string>
    <string name="date">Date</string>
    <string name="choose_category">Choose Category</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="food">Food</string>
    <string name="_275_45">$275.45</string>
    <string name="clothes">Clothes</string>
    <string name="_64_75">64.75</string>
    <string name="gas">Gas</string>
    <string name="_243_88">$243.88</string>
    <string name="misc">Misc</string>
    <string name="_24_37">$24.37</string>
    <string name="december">December</string>
    <string name="monthly_summary">Monthly Summary</string>
    <string name="spent">SPENT</string>
    <string name="_200_00">$200.00</string>
    <string name="remaining">REMAINING</string>
    <string name="_0_00">$0.00</string>
    <string name="totalll">TOTAL</string>
    <string name="monthly_breakdown">Monthly Breakdown</string>
    <string name="uh_oh_looks_like_you_don_t_have_any_data">Uh oh! Looks like you don\'t have any data</string>
    <string name="click_on_the_button_below_to_add_your_first_budget">Click on the button below to add your first budget</string>
    <string name="add_item">Add Item</string>
    <string name="nov">NOV</string>
    <string name="_3_534">$3,534</string>
    <string name="left">LEFT</string>
    <string name="_10_500">$10,500</string>
    <string name="moniesbaybay">$</string>
    <string name="change">Change</string>
    <string name="import_export">Import/Export</string>
    <string name="importt">Import</string>
    <string name="export">Export</string>
</resources>
