<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mikezurawski.onyourmark.views.BreakdownActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="&lt;"/>

        <TextView
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dec"/>

        <Button
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="&gt;"/>
    </LinearLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/mega_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            style="@style/mega_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_275_45"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/mega_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clothes"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            style="@style/mega_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_64_75"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/mega_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gas"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            style="@style/mega_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_243_88"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/mega_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/misc"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            style="@style/mega_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_24_37"/>
    </LinearLayout>

</LinearLayout>
