<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mikezurawski.onyourmark.views.EditReceipt"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/activity_edit_set_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"

        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/edit_total"
                    style="@style/CategoryStyle" />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:paddingStart="2dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editTotal"
                        android:hint="@string/total"
                        android:inputType="numberDecimal"
                        style="@style/EditorFieldStyle" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/date"
                    style="@style/CategoryStyle" />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:paddingStart="2dp"
                    android:paddingEnd="0dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editDate"
                        android:hint="@string/date"
                        android:inputType="text"
                        style="@style/EditorFieldStyle" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/choose_category"
                    style="@style/CategoryStyle" />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:paddingStart="2dp"
                    android:paddingTop="14dp"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/mySpinner"
                        android:layout_width="match_parent"
                        android:entries="@array/categories_array"
                        android:prompt="@string/category"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">


        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <Button android:id="@+id/cancel_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>

            <Button android:id="@+id/save_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
