<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar_add_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorPrimary"
        android:minHeight="?android:attr/actionBarSize"
        app:titleTextColor="@color/colorWhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/take_a_photo_or_select_an_image"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/selectedImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:background="#E0E0E0"
            android:src="@drawable/ic_menu_camera" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonTakePhoto"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/take_photo" />

                <Button
                    android:id="@+id/buttonAlbumPhoto"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/select_photo" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonEditReceipt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_receipt" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_spinner"
            android:visibility="gone"
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>
    </LinearLayout>
</LinearLayout>
